--- a/public/templates/node_request/client.hbs
+++ b/public/templates/node_request/client.hbs
@@ -78,6 +78,7 @@ function {{constructorName}} (host) {
   var {{objectName}} = (function {{objectName}}() {
     {{#methods}}
       /**
+       * {{description}}
        * {{#functionParameters}}
        * @param {{type}} {{name}}{{#description}} - {{this}}{{/description}}{{#properties}}
        * @param {{type}} options.{{name}}{{#description}} - {{this}}{{/description}}{{/properties}}{{/functionParameters}}
