--- a/public/templates/node_0_12/client.hbs
+++ b/public/templates/node_0_12/client.hbs
@@ -62,15 +62,15 @@ function {{constructorName}} (host) {
 
     return new Promise(function (resolve, reject) {
       request(options, function (err, response) {
-        var duration = Date.now() - startMs;
-        var requestHref = response.request ? response.request.href : '<unknown url>'
-
-        log('Completed ' + options.method + ' ' + requestHref + ' ' + response.statusCode + ' ' + duration + 'ms');
-
         if (err) {
           reject(err);
           return;
         }
+
+        var duration = Date.now() - startMs;
+        var requestHref = response.request ? response.request.href : '<unknown url>';
+
+        log('Completed ' + options.method + ' ' + requestHref + ' ' + response.statusCode + ' ' + duration + 'ms');
 
         resolve(response);
       });
