--- a/public/templates/node_5_es6/resource.hbs
+++ b/public/templates/node_5_es6/resource.hbs
@@ -1,13 +1,9 @@
 import { isObject,
           doRequest,
-          requiresDiscriminator,
-          getTypesForUnion,
-          dataIsAndCanBePrimitive,
-          getApidocTypeForPrimitive } from './utils';
+          getRequestOptions } from './utils';
 
 export default class {
   constructor (host, auth, headers) {
-    console.log('Resource constucted with', host, auth, headers);
     this.host = host;
     this.auth = auth;
     this.headers = headers;
@@ -31,80 +27,40 @@ export default class {
         method: '{{method}}'
       };
 
-      {{#if requiresOptions}}
-      // if options is not defined, set it
-      options = options || {};
+      return getRequestOptions(operationSettings{{#if requiresOptions}}, options{{/if}})
+        .then((opts) => {
+          const uri = `${this.host}{{{endpointUriStr}}}`;
+          const auth = this.auth;
 
-      // otherwise if it's not the kind of object we want...
-      if (!isObject(options)) {
-        return Promise.reject(new Error('options parameter is required and must be a plain object'));
-      }
-      {{/if}}
+          // Layer in some options local to this class
+          const requestOpts = Object.assign({}, opts, {
+            auth,
+            uri
+          });
 
-      {{#if requiresBody}}
-      const bodyType = '{{bodyType}}';
-
-      if (!options.data) {
-        return Promise.reject(new Error('options.data property is required.'));
-      }
-
-        {{#if discriminator}}
-      if(dataIsAndCanBePrimitive(bodyType, options.data)) {
-        options.data = {
-          {{discriminator}}: getApidocTypeForPrimitive(bodyType, options.data),
-          value: options.data
-        };
-      }
-
-      if (!options.data['{{discriminator}}']) {
-        return Promise.reject(new Error(`options.data.{{discriminator}} must be defined. Available options for [${bodyType}] are: ${getTypesForUnion(bodyType).join(', ')}`));
-      }
-        {{/if}}
-      {{/if}}
-
-      // TODO: MERGE WITH RESULT OF getRequestOptions
-      const url = `${this.host}{{{endpointUriStr}}}`;
-
-      const queryString = {
-        {{#queryParams}}
-        {{name}}: options.{{nameCamelCase}},
-        {{/queryParams}}
-      };
-      const requestOpts = {
-        auth: this.auth,
-        qs: queryString,
-        {{#if isApplicationJson}}
-        json: options.data,
-        {{/if}}
-        {{#if isFormUrlEncoded}}
-        form: options.data,
-        {{/if}}
-        uri: url,
-        method: '{{method}}'
-      };
-
-      return doRequest(requestOpts).then(function (serverResponse) {
-        switch (serverResponse.statusCode) {
-          {{#responses}}
-          case {{code}}:
-            {{#if isResolve}}
-              {{#if isUnitType}}
-            return Promise.resolve();
-              {{else}}
-            if (requestOpts.json) {
-              return Promise.resolve(serverResponse.body);
-            } else {
-              return Promise.resolve(JSON.parse(serverResponse.body));
+          return doRequest(requestOpts).then(function (serverResponse) {
+            switch (serverResponse.statusCode) {
+              {{#responses}}
+              case {{code}}:
+                {{#if isResolve}}
+                  {{#if isUnitType}}
+                return Promise.resolve();
+                  {{else}}
+                if (requestOpts.json) {
+                  return Promise.resolve(serverResponse.body);
+                } else {
+                  return Promise.resolve(JSON.parse(serverResponse.body));
+                }
+                  {{/if}}
+                {{else}}
+                return Promise.reject({ status: serverResponse.statusCode, data: serverResponse.body });
+                {{/if}}
+              {{/responses}}
+              default:
+                return Promise.reject(new Error('Unknown response code: ' + serverResponse.statusCode));
             }
-              {{/if}}
-            {{else}}
-            return Promise.reject({ status: serverResponse.statusCode, data: serverResponse.body });
-            {{/if}}
-          {{/responses}}
-          default:
-            return Promise.reject(new Error('Unknown response code: ' + serverResponse.statusCode));
-        }
-      });
+          });
+        });
     }
 
   {{/operations}}
