Don't lose options that user provided

--- a/public/templates/node_5_es6/utils.hbs
+++ b/public/templates/node_5_es6/utils.hbs
@@ -46,12 +46,12 @@ export function getRequestOptions (settings, userOptions) {
     const form = settings.isFormUrlEncoded ? options.data : undefined;
     const method = settings.method;
 
-    resolve({
+    resolve(Object.asign(options, {
       json,
       form,
       method,
       qs
-    });
+    }));
   });
 }
 
